--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title: shows in search results -->
+  <title>Been Here Still Here | Protect Tenant Rights </title>
+
+  <!-- Description: short summary Google shows -->
+  <meta name="description" content="Been Here Still Here: A tenant rights project honoring my grandmother, fighting for rent-stabilized housing, and standing against displacement in NYC." />
+
+  <!-- Keywords: not as important anymore, but won’t hurt -->
+  <meta name="keywords" content="been here still here, tenant rights, rent stabilized, housing justice, NYC displacement, advocacy, grief and resilience" />
+
+  <!-- Open Graph (for social sharing like Facebook, Twitter, WhatsApp) -->
+  <meta property="og:title" content="Been Here Still Here" />
+  <meta property="og:description" content="Tenant rights and resilience in NYC: standing against displacement and honoring community history." />
+  <meta property="og:url" content="https://beenherestillhere.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Been Here Still Here" />
+  <meta name="twitter:description" content="Tenant rights and resilience in NYC: standing against displacement and honoring community history." />
+
+  <!-- Favicon (small icon in browser tab) -->
+  <link rel="icon" href="favicon.ico" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Been Here, Still Here — Counter</title>
