--- a/index.html
+++ b/index.html
@@ -119,12 +119,25 @@
       SINCE MY GRANDMA DIED AND I'M STILL WAITING FOR MY LEASE AND ADVOCATING FOR MY RENT-STABILIZED TENANT RIGHTS INSTEAD OF BEING ABLE TO GRIEVE IN PEACE.
     </div>
 
-    <div class="link">
-      <a href="https://change.org/protectrentersrights" target="_blank" rel="noopener noreferrer">
-        CHANGE.ORG/PROTECTRENTERSRIGHTS
-      </a>
-    </div>
-  </div>
+  <div class="link">
+  <span>Sign the Petition > 
+    <a href="https://change.org/protectrentersrights" target="_blank" rel="noopener noreferrer">
+      CHANGE.ORG/PROTECTRENTERSRIGHTS
+    </a>
+  </span>
+  &nbsp;&nbsp;|&nbsp;&nbsp;
+  <span>Art Fundraiser > 
+    <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
+      BUY A WATERCOLOR
+    </a>
+  </span>
+  &nbsp;&nbsp;|&nbsp;&nbsp;
+  <span>
+    <a href="mailto:kristinamlopez@gmail.com">
+      CONTACT
+    </a>
+  </span>
+</div>
 
   <script>
     // Counter starts from May 7, 2025 (ONE YEAR mark + first day)
