--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Title: shows in search results -->
-  <title>Been Here Still Here | Protect Tenant Rights </title>
+  <title>Been Here Still Here | Kristina Maria Lopez </title>
 
   <!-- Description: short summary Google shows -->
-  <meta name="description" content="Been Here Still Here: A tenant rights project honoring my grandmother, fighting for rent-stabilized housing, and standing against displacement in NYC." />
+  <meta name="description" content="Been Here Still Here: A tenant rights project honoring my grandmother, fighting for the preservation of rent-stabilized housing, and standing against gentrificaiton fueled displacement in NYC." />
 
   <!-- Keywords: not as important anymore, but won’t hurt -->
-  <meta name="keywords" content="been here still here, tenant rights, rent stabilized, housing justice, NYC displacement, advocacy, grief and resilience" />
+  <meta name="keywords" content="been here still here, tenant rights, rent stabilized, housing justice, NYC displacement, advocacy, grief, and Kristina Maria Lopez" />
 
   <!-- Open Graph (for social sharing like Facebook, Twitter, WhatsApp) -->
   <meta property="og:title" content="Been Here Still Here" />
-  <meta property="og:description" content="Tenant rights and resilience in NYC: standing against displacement and honoring community history." />
+  <meta property="og:description" content="Rent stabilized tenant rights in NYC: standing against displacement and gentrification while honoring community history." />
   <meta property="og:url" content="https://beenherestillhere.com" />
   <meta property="og:type" content="website" />
 
