--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Been Here Still Here: A tenant rights project honoring my grandmother, fighting for the preservation of rent-stabilized housing, and standing against gentrificaiton fueled displacement in NYC." />
 
   <!-- Keywords: not as important anymore, but won’t hurt -->
-  <meta name="keywords" content="been here still here, tenant rights, rent stabilized, housing justice, NYC displacement, advocacy, grief, and Kristina Maria Lopez" />
+  <meta name="keywords" content="been here still here, tenant rights, rent stabilized, housing justice, NYC displacement, advocacy, grief, Kristina Maria Lopez, 111 street" />
 
   <!-- Open Graph (for social sharing like Facebook, Twitter, WhatsApp) -->
   <meta property="og:title" content="Been Here Still Here" />
