--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Title: shows in search results -->
-  <title>Been Here Still Here | Kristina Maria Lopez </title>
+  <title>BEEN HERE STILL HERE | 111 street </title>
 
   <!-- Description: short summary Google shows -->
-  <meta name="description" content="Been Here Still Here: A tenant rights project honoring my grandmother, fighting for the preservation of rent-stabilized housing, and standing against gentrificaiton fueled displacement in NYC." />
+  <meta name="description" content="Been Here Still Here: A tenant rights project on 111 street honoring my grandmother, fighting for the preservation of rent-stabilized housing, and standing against gentrificaiton fueled displacement in NYC. By Kristina Maria Lopez" />
 
   <!-- Keywords: not as important anymore, but won’t hurt -->
   <meta name="keywords" content="been here still here, tenant rights, rent stabilized, housing justice, NYC displacement, advocacy, grief, Kristina Maria Lopez, 111 street" />
@@ -132,7 +132,12 @@
     CONTACT
   </a>
 </div>
-
+<!-- Subtle SEO text -->
+<p style="font-size: 10px; color: #f9f9f9; margin-top: 20px; text-align: center;">
+  BEEN HERE STILL HERE is a housing justice and art project connected to 111 Street. 
+  This site shares the story, petition, and fundraiser led by Kristina Maria Lopez, 
+  advocating for rent-stabilized tenant rights in New York City.
+</p>
   <script>
     // Counter starts from May 7, 2025 (ONE YEAR mark + first day)
     const startDate = new Date(2025, 4, 7, 0, 0, 0); 
