--- a/index.html
+++ b/index.html
@@ -104,26 +104,26 @@
       color:var(--fg);
       text-decoration:underline;
     }
- /* LINKS SECTION */
+/* LINKS SECTION */
 .links {
   display: flex;
   justify-content: center;
-  gap: 20px;        /* space between links */
-  flex-wrap: nowrap; /* prevent wrapping */
-  overflow-x: auto;  /* allow horizontal scroll if too wide */
-  white-space: nowrap; /* keep text together */
+  gap: 20px;              /* space between links */
+  flex-wrap: nowrap;       /* keep all links on one line */
   margin-top: 0.6rem;
-  font-size: clamp(12px, 1.6vw, 14px);
 }
 
 .links a {
   color: var(--fg);
   text-decoration: none;
+  white-space: nowrap;     /* keep link text together */
+  font-size: clamp(12px, 2vw, 14px); /* shrink on small screens, grow on large */
 }
 
 .links a:hover {
   text-decoration: underline;
 }
+
   </style>
 </head>
 <body>
