--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 </div>
 
 <!-- Subtle SEO text beneath links -->
-<p style="font-size: 10px; color: #f9f9f9; margin-top: 20px; text-align: center; line-height: 1.4;">
-  BEEN HERE STILL HERE is a housing justice and art project connected to 111 Street.<br>
-  This site shares the story, petition, and fundraiser led by Kristina Lopez, 
+<p style="font-size: 10px; color: #f9f9f9; margin-top: 20px; text-align: center;">
+  BEEN HERE STILL HERE is a housing justice and art project connected to 111 Street. 
+  <br>This site shares the counter, petition, and fundraiser art sale led by Kristina Maria Lopez, 
   advocating for rent-stabilized tenant rights in New York City.
 </p>
 
