--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 
 <!-- Subtle SEO text beneath links -->
 <p style="font-size: 10px; color: #f9f9f9; margin-top: 20px; text-align: center;">
-  BEEN HERE STILL HERE is a housing justice and art project connected to 111 Street. 
-  <br>This site shares the counter, petition, and fundraiser art sale led by Kristina Maria Lopez, 
+  BEEN HERE STILL HERE is a housing justice and art project connected to 111 Street in Morningside Heights, NYC. 
+  <br>This site shares the counter, petition, and fundraiser art sale by Kristina Maria Lopez, 
   advocating for rent-stabilized tenant rights in New York City.
 </p>
 
