--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
   <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
     BUY A WATERCOLOR</a>
   &nbsp;
+   <a href="http://BEEN-Here-still-here.printify.me" target="_blank" rel="noopener noreferrer">
+    BUY MERCH</a>
+  &nbsp;
   <a href="mailto:kristinamlopez@gmail.com">
     CONTACT</a>
 </div>
