--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
     SIGN THE PETITION</a>
   &nbsp;
   <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
-    BUY A WATERCOLOR</a>
+    ORDER A WATERCOLOR</a>
   &nbsp;
    <a href="http://BEEN-Here-still-here.printify.me" target="_blank" rel="noopener noreferrer">
-    BUY MERCH</a>
+    ORDER MERCH</a>
   &nbsp;
   <a href="mailto:kristinamlopez@gmail.com">
     CONTACT</a>
@@ -139,8 +139,8 @@
 
 <!-- Subtle SEO text beneath links -->
 <p style="font-size: 10px; color: #f9f9f9; margin-top: 20px; text-align: center;">
-  BEEN HERE STILL HERE is a housing justice and art project connected to 111 Street in Morningside Heights, NYC. 
-  <br>This site shares the counter, petition, and fundraiser art sale by Kristina Maria Lopez, 
+  BEEN HERE STILL HERE is a housing justice and art project connected to 111th Street in Morningside Heights, NYC. 
+  <br>This site shares the counter, petition, and fundraiser art / merch by Kristina Maria Lopez, 
   advocating for rent-stabilized tenant rights in New York City.
 </p>
 
