--- a/index.html
+++ b/index.html
@@ -127,14 +127,17 @@
   <a href="https://change.org/protectrentersrights" target="_blank" rel="noopener noreferrer">
     SIGN THE PETITION</a>
   &nbsp;
+  <a href="mailto:kristinamlopez@gmail.com">
+    CONTACT</a>
+  <BR>
+  <a href="paypal.me/KristinaLopezNYC" target="_blank" rel="noopener noreferrer">
+    DONATE</a>
+  &nbsp;
   <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
     ORDER A WATERCOLOR</a>
   &nbsp;
    <a href="http://BEEN-Here-still-here.printify.me" target="_blank" rel="noopener noreferrer">
     ORDER MERCH</a>
-  &nbsp;
-  <a href="mailto:kristinamlopez@gmail.com">
-    CONTACT</a>
 </div>
 
 <!-- Subtle SEO text beneath links -->
