--- a/index.html
+++ b/index.html
@@ -127,9 +127,6 @@
   <a href="https://change.org/protectrentersrights" target="_blank" rel="noopener noreferrer">
     SIGN THE PETITION</a>
   &nbsp;
-  <a href="mailto:kristinamlopez@gmail.com">
-    CONTACT</a>
-  <BR>
   <a href="paypal.me/KristinaLopezNYC" target="_blank" rel="noopener noreferrer">
     DONATE</a>
   &nbsp;
@@ -138,6 +135,9 @@
   &nbsp;
    <a href="http://BEEN-Here-still-here.printify.me" target="_blank" rel="noopener noreferrer">
     ORDER MERCH</a>
+    &nbsp;
+  <a href="mailto:kristinamlopez@gmail.com">
+    CONTACT</a>
 </div>
 
 <!-- Subtle SEO text beneath links -->
