--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <a href="https://change.org/protectrentersrights" target="_blank" rel="noopener noreferrer">
     SIGN THE PETITION</a>
   &nbsp;
-  <a href="paypal.me/KristinaLopezNYC" target="_blank" rel="noopener noreferrer">
+  <a href="http://PAYPAL.ME/KRISTINALOPEZNYC" target="_blank" rel="noopener noreferrer">
     DONATE</a>
   &nbsp;
   <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
