--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
 <!-- Subtle SEO text beneath links -->
 <p style="font-size: 10px; color: #f9f9f9; margin-top: 20px; text-align: center;">
-  BEEN HERE STILL HERE is a housing justice and art project connected to 111th Street in Morningside Heights, NYC. 
-  <br>This site shares the counter, petition, and fundraiser art / merch by Kristina Maria Lopez, 
-  advocating for rent-stabilized tenant rights in New York City.
+  BEEN HERE STILL HERE is a housing justice art project connected to 111th Street in Morningside Heights, NYC. 
+  <br>This site shares the counter, petition, and fundraiser / art / merch supporting my right to remain home and advocating for rent-stabilized tenants' rights.
+  <br> I'm Kristina Maria Lopez. I've been here and I'm still here. ✊🏽
 </p>
 
   <script>
