--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <p style="font-size: 10px; color: #f9f9f9; margin-top: 20px; text-align: center;">
   BEEN HERE STILL HERE is a housing justice art project connected to 111th Street in Morningside Heights, NYC. 
   <br>This site shares the counter, petition, and fundraiser / art / merch supporting my right to remain home and advocating for rent-stabilized tenants' rights.
-  <br> I'm Kristina Maria Lopez. I've been here and I'm still here. ✊🏽
+  <br> My name is Kristina Maria Lopez, granddaughter of Mireya and Jaime. I've been here and I'm still here. ✊🏽
 </p>
 
   <script>
