--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
   <a href="http://PAYPAL.ME/KRISTINALOPEZNYC" target="_blank" rel="noopener noreferrer">
     DONATE</a>
   &nbsp;
-  <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
-    ORDER A WATERCOLOR</a>
+ <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
+  <span style="white-space: nowrap;">ORDER A WATERCOLOR</span>
+</a>
   &nbsp;
    <a href="http://BEEN-Here-still-here.printify.me" target="_blank" rel="noopener noreferrer">
     ORDER MERCH</a>
