--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   &nbsp;
  <a href="https://forms.gle/556rZD5ekLtJ45ny9" target="_blank" rel="noopener noreferrer">
   <span style="white-space: nowrap;">ORDER A WATERCOLOR</span>
-</a>
+</a>  &nbsp;
   &nbsp;
    <a href="http://BEEN-Here-still-here.printify.me" target="_blank" rel="noopener noreferrer">
     ORDER MERCH</a>
